<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>dynamic_reconfigure</name>
  <version>1.6.0</version>
  <description>
    This unary stack contains the dynamic_reconfigure package which provides a means to change
    node parameters at any time without having to restart the node.
  </description>
  <author>Blaise Gassend</author>
  <maintainer email="michael@openrobotics.org">Michael Carroll</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/dynamic_reconfigure</url>
  <url type="bugtracker">https://github.com/ros/dynamic_reconfigure/issues</url>
  <url type="repository">https://github.com/ros/dynamic_reconfigure</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>cpp_common</build_depend>
  <build_depend>roscpp_serialization</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosservice</exec_depend>
  <exec_depend>boost</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <rosdoc config="rosdoc.yaml" />
    <build_type>ament_cmake</build_type>
  </export>
</package>
